--- a/manifest.json
+++ b/manifest.json
@@ -37,5 +37,10 @@
     "scripts": [
       "bg.js"
     ]
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "zakius@polly"
+    }
   }
 }
