--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "name": "zakius",
     "url": ""
   },
-  "version": "1.1",
+  "version": "1.2",
   "content_scripts": [
     {
       "all_frames": true,
@@ -23,7 +23,9 @@
   "permissions": [
     "<all_urls>",
     "storage",
-    "tabs"
+    "tabs",
+    "webRequest",
+    "webRequestBlocking"
   ],
   "web_accessible_resources": [
     "polyfills/ResizeObserver.js",
