--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "name": "zakius",
     "url": ""
   },
-  "version": "1.2",
+  "version": "1.3",
   "content_scripts": [
     {
       "all_frames": true,
@@ -40,6 +40,8 @@
   },
   "background": {
     "scripts": [
+      "lib/text-encoding/encoding-indexes.js",
+      "lib/text-encoding/encoding.js",
       "bg.js"
     ]
   },
