--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ name: Create Release
 
 jobs:
   build:
-    name: Upload Release Asset
+    name: Create Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
