--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,12 +3,10 @@ on:
     # Sequence of patterns matched against refs/tags
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-
-name: Create Release
-
+name: Upload Release Asset
 jobs:
   build:
-    name: Create Release
+    name: Upload Release Asset
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
