--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,15 @@
-name: Upload Release Asset
+name: URA
 
 on:
   push:
     # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    tags: [ 'v*' ] # Push events to matching v*, i.e. v1.0, v20.15.10
+
+  workflow_dispatch:
 
 jobs:
   build:
-    name: Upload Release Asset
+    name: URA
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
