--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          zip --junk-paths -r polly.xpi ./ -x '*.git*'
+          zip -r polly.xpi ./ -x '*.git*'
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
