--- a/manifest.json
+++ b/manifest.json
@@ -60,7 +60,8 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "zakius@polly"
+      "id": "zakius@polly",
+      "update_url": "https://raw.githubusercontent.com/zakius/Polly/master/updates.json"
     }
   }
 }
